--- a/Lab_01.ipynb
+++ b/Lab_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPM26UPYE0vHmgglDk87Qrr",
+      "authorship_tag": "ABX9TyMoTQwAWHJlVCFGmHwQ7KZo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "# **Lab Instructor: Mam Ammara Irfan**\n",
         "\n",
-        "# **Course Instructor: Dr. Arsha Iqbal**"
+        "# **Course Instructor: Dr. Arshad Iqbal**"
       ],
       "metadata": {
         "id": "kYjSGTE7Sfqn"
