--- a/Lab_01.ipynb
+++ b/Lab_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoTQwAWHJlVCFGmHwQ7KZo",
+      "authorship_tag": "ABX9TyOANf1kAT9tTYYCztf6kOfz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,21 +29,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Name: Abdul Moiz Arsalan**\n",
-        "\n",
-        "# **Reg no: B22F1086AI072**\n",
-        "\n",
-        "# **Lab Instructor: Mam Ammara Irfan**\n",
-        "\n",
-        "# **Course Instructor: Dr. Arshad Iqbal**"
-      ],
-      "metadata": {
-        "id": "kYjSGTE7Sfqn"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# **Load the Dataset**\n",
         "\n",
         "# **Explanation:**\n",
@@ -58,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -421,7 +406,7 @@
         "id": "uXdnrFGtTeyX",
         "outputId": "3a00913e-2045-459a-90e8-ed6cc4080ba9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +725,7 @@
         "id": "JA_dZ4odTj3N",
         "outputId": "826c4eed-1440-4da3-dbe5-c3d9d26964ac"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1057,13 +1042,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "x07iO2FqTs82",
         "outputId": "9366471c-0edb-488a-c096-e5dd9c99d439"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,13 +1092,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ea42mJhkTvJX",
         "outputId": "3a859b24-30c2-433b-cb5e-ad067f218f93"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1173,13 +1156,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Ckxmso_YTzcn",
         "outputId": "418394ef-7679-4c9b-933f-90da192a1980"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1241,13 +1223,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "aVR6VkMcT_QD",
         "outputId": "d3cc795d-fce6-498c-f2c6-fefa31bae2db"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
