--- a/Lab_02.ipynb
+++ b/Lab_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo1ywtCGGOnXXj5SztZGoW",
+      "authorship_tag": "ABX9TyNkUw0/m/EAMH943isXoAD1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,30 +29,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Name: Abdul Moiz Arsalan**\n",
-        "\n",
-        "**Reg_no: B22F1086AI072**\n",
-        "\n",
-        "**Lab Instructor: Mam Ammara Irfan**\n",
-        "\n",
-        "**Course Instructor: Dr Arshad Iqbal**\n",
-        "\n",
-        "# **Lab: 03**\n",
-        "\n",
-        "* Select dataset of your own choice also provide reference link of datset.\n",
-        "* Apply preprocessing techniques on your dataset.\n",
-        "* Remove outliers in your dataset.\n",
-        "* Apply ANN model on you dataset and perform visualization.\n",
-        "\n",
-        "Dataset is taken from this repository of Github: https://github.com/moizarsalan/Advanced_Python_Labs/blob/main/Dataset/housing.csv"
-      ],
-      "metadata": {
-        "id": "SnSeiroGBBti"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# **Loading and reading the Dataset**\n",
         "\n",
         "This Python code is used to load and display basic information about a dataset stored in a CSV file.\n",
@@ -73,11 +49,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "tRthsOR8uHhY",
         "outputId": "fbe38426-62d1-4f0b-ebbf-cdeba181ddd8"
@@ -161,13 +136,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9GDVYTjwvcFZ",
         "outputId": "e49f85d5-a550-4a9b-de70-b8d22deac7f2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,13 +208,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "W4T17BANwFf4",
         "outputId": "e0070be8-da9e-4364-b061-bc30ac7757c3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +255,7 @@
       "metadata": {
         "id": "bg20Rjqb7LCI"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +308,7 @@
       "metadata": {
         "id": "UVqbbMBJ769L"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +350,7 @@
       "metadata": {
         "id": "q3fF6-zG87Gh"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -440,13 +413,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "M8-2-94K9VSk",
         "outputId": "2fd15745-4b02-4bf3-f7f9-998e5f040928"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,13 +458,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ktDR1jKX_aKS",
         "outputId": "7cf39b9a-dd36-4cc4-bf94-24fde9b790c9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,13 +705,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-8_U00VaAP6Y",
         "outputId": "53b836d7-545c-4420-88b0-d7b48d8073f5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +763,7 @@
         "id": "j5XDJxIKAdEc",
         "outputId": "dadc2d37-65a3-48be-a396-64e8b5f84c23"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
